# nix-miso-template

./: .gitignore  README.md  default.nix  nix-miso-template.cabal  symlink.sh
client/: Client.hs
final/: default.nix  nix-miso-template.cabal  symlink.sh
final/client/: Client.hs
final/server/: Server.hs
final/shared/: Shared.hs
final/static/: all.js
server/: Server.hs
server-client/: default.nix  nix-miso-template.cabal  symlink.sh
server-client/client/: Client.hs
server-client/server/: Server.hs
server-client/shared/: Shared.hs
server-client/static/: index.html  lib.js  out.js  rts.js  runmain.js
server-only/: default.nix  nix-miso-template.cabal  result  result-2
server-only/server/: Server.hs
shared/: Example.hs  Shared.hs
slides/: main.tex
